tests/integration/records/errors/closed-and-quantified/main.cx
fun f<R: {}>(r: R) {
  if True then r else {}
}

fun main() {
}
